--- a/src/main/resources/templates/accept-enterprise-cooperation-request-template.html
+++ b/src/main/resources/templates/accept-enterprise-cooperation-request-template.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h3>Create cooperation enterprise account succefully</h3>
-<h6>Username: <span th:text="${username}"></span></h6>
-<h6>Passowrd: <span th:text="${password}"></span></h6>
+<p>Username: <span th:text="${username}"></span></p>
+<p>Passowrd: <span th:text="${password}"></span></p>
 </body>
 </html>
